fixing z-index on banner content

--- a/src/components/Banner/_banner.scss
+++ b/src/components/Banner/_banner.scss
@@ -20,6 +20,7 @@
     flex-direction: column;
     align-items: center;
     padding: 0 30px;
+    z-index: 10;
     h1 {
       font-size: 1.65em;
       margin-bottom: 30px;
